# 2026-numerical-computation

./: README.md
hw1/: README.md  skeleton.tar
hw1/skeleton/: CMakeLists.txt
hw1/skeleton/include/: AlignedAllocator.hpp  sigmoid.hpp
hw1/skeleton/src/: main.cpp  sigmoid_avx2.cpp  sigmoid_default.cpp  sigmoid_omp.cpp  test.cpp
project/: README.md  skeleton.tar
project/skeleton/: .gitignore  CMakeLists.txt  README.md  requirements.txt
project/skeleton/python_src/: example.py
project/skeleton/src/: my_module.cpp
week01/: delta.cpp  floating_point.cpp  hilbert_matrix.py  numerical_derivative.cpp  second_order.cpp  series_sum.cpp  stirling.py
week02/: bessel.cpp  error_accum.cpp  hilbert_matrix.py  kahan_sum.cpp
week04/: cpuid.cpp
week04/avx-benchmark/: MyVector.cpp  MyVector.hpp
week04/simd-benchmark/: .clang-format  .gitignore  CMakeLists.txt  Makefile
week04/simd-benchmark/include/: MyMatrix.hpp  MyVector.hpp
week04/simd-benchmark/src/: MyVector.cpp  MyVector_dot.cpp  MyVector_dot_fma.cpp  main.cpp  matrix_vector_prod.cpp
week04/threads/: cppthreads.cpp  openmp.cpp  openmp_parallel_for.cpp  openmp_shared.cpp  pthreads.cpp
week06/: csr_vector_product.cpp
week07/: fitting.ipynb
week09/: .clang-format  .gitignore  CMakeLists.txt  requirements.txt
week09/python_src/: test_mpi4py.py
week09/src/: mpi_bcast.cpp  mpi_producer_consumer.cpp  mpi_scatter_gather.cpp  mpi_send_recv.cpp  mpi_test.cpp  nanobind_example.cpp
